// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`apexo CLI help-text snapshots every documented command emits stable help text: apexo acp --help 1`] = `
"apexo acp

start ACP (Agent Client Protocol) server

Options:
  -h, --help         show help                                                             [boolean]
  -v, --version      show version number                                                   [boolean]
      --print-logs   print logs to stderr                                                  [boolean]
      --log-level    log level                  [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure         run without external plugins                                          [boolean]
      --port         port to listen on                                         [number] [default: 0]
      --hostname     hostname to listen on                           [string] [default: "127.0.0.1"]
      --mdns         enable mDNS service discovery (defaults hostname to 0.0.0.0)
                                                                          [boolean] [default: false]
      --mdns-domain  custom domain name for mDNS service (default: apexo.local)
                                                                   [string] [default: "apexo.local"]
      --cors         additional domains to allow for CORS                      [array] [default: []]
      --cwd          working directory [string] [default: "<HOME>"]"
`;

exports[`apexo CLI help-text snapshots every documented command emits stable help text: apexo mcp --help 1`] = `
"apexo mcp

manage MCP (Model Context Protocol) servers

Commands:
  apexo mcp add [name]     add an MCP server
  apexo mcp list           list MCP servers and their status                           [aliases: ls]
  apexo mcp auth [name]    authenticate with an OAuth-enabled MCP server
  apexo mcp logout [name]  remove OAuth credentials for an MCP server
  apexo mcp debug <name>   debug OAuth connection for an MCP server

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]"
`;

exports[`apexo CLI help-text snapshots every documented command emits stable help text: apexo attach --help 1`] = `
"apexo attach <url>

attach to a running apexo server

Positionals:
  url  http://localhost:4096                                                     [string] [required]

Options:
  -h, --help          show help                                                            [boolean]
  -v, --version       show version number                                                  [boolean]
      --print-logs    print logs to stderr                                                 [boolean]
      --log-level     log level                 [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure          run without external plugins                                         [boolean]
      --dir           directory to run in                                                   [string]
  -c, --continue      continue the last session                                            [boolean]
  -s, --session       session id to continue                                                [string]
      --fork          fork the session when continuing (use with --continue or --session)  [boolean]
  -p, --password      basic auth password (defaults to APEXO_SERVER_PASSWORD)               [string]
  -u, --username      basic auth username (defaults to APEXO_SERVER_USERNAME or 'apexo')    [string]
      --mini          start the minimal interactive interface             [boolean] [default: false]
      --no-replay     disable mini session history replay on resume and after resize       [boolean]
      --replay-limit  cap visible mini replay to the newest N messages                      [number]"
`;

exports[`apexo CLI help-text snapshots every documented command emits stable help text: apexo run --help 1`] = `
"apexo run [message..]

run apexo with a message

Positionals:
  message  message to send                                                     [array] [default: []]

Options:
  -h, --help         show help                                                             [boolean]
  -v, --version      show version number                                                   [boolean]
      --print-logs   print logs to stderr                                                  [boolean]
      --log-level    log level                  [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure         run without external plugins                                          [boolean]
      --command      the command to run, use message for args                               [string]
  -c, --continue     continue the last session                                             [boolean]
  -s, --session      session id to continue                                                 [string]
      --fork         fork the session before continuing (requires --continue or --session) [boolean]
  -m, --model        model to use in the format of provider/model                           [string]
      --agent        agent to use                                                           [string]
      --format       format: default (formatted) or json (raw JSON events)
                                          [string] [choices: "default", "json"] [default: "default"]
  -f, --file         file(s) to attach to message                                            [array]
      --title        title for the session (uses truncated prompt if no value provided)     [string]
      --attach       attach to a running apexo server (e.g., http://localhost:4096)         [string]
  -p, --password     basic auth password (defaults to APEXO_SERVER_PASSWORD)                [string]
  -u, --username     basic auth username (defaults to APEXO_SERVER_USERNAME or 'apexo')     [string]
      --dir          directory to run in, path on remote server if attaching                [string]
      --port         port for the local server (defaults to random port if no value provided)
                                                                                            [number]
      --variant      model variant (provider-specific reasoning effort, e.g., high, max, minimal)
                                                                                            [string]
      --thinking     show thinking blocks                                                  [boolean]
  -i, --interactive  run in direct interactive split-footer mode          [boolean] [default: false]
      --auto         auto-approve permissions that are not explicitly denied (dangerous!)
                                                                          [boolean] [default: false]"
`;

exports[`apexo CLI help-text snapshots every documented command emits stable help text: apexo debug --help 1`] = `
"apexo debug

debugging and troubleshooting tools

Commands:
  apexo debug config        show resolved configuration
  apexo debug lsp           LSP debugging utilities
  apexo debug rg            ripgrep debugging utilities
  apexo debug file          file system debugging utilities
  apexo debug scrap         list all known projects
  apexo debug skill         list all available skills
  apexo debug snapshot      snapshot debugging utilities
  apexo debug startup       print startup timing
  apexo debug agent <name>  show agent configuration details
  apexo debug v2            debug v2 catalog and built-in plugins
  apexo debug info          show debug information
  apexo debug paths         show global paths (data, config, cache, state)
  apexo debug wait          wait indefinitely (for debugging)

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]"
`;

exports[`apexo CLI help-text snapshots every documented command emits stable help text: apexo providers --help 1`] = `
"apexo providers

manage AI providers and credentials

Commands:
  apexo providers list               list providers and credentials                    [aliases: ls]
  apexo providers login [url]        log in to a provider
  apexo providers logout [provider]  log out from a configured provider

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]"
`;

exports[`apexo CLI help-text snapshots every documented command emits stable help text: apexo agent --help 1`] = `
"apexo agent

manage agents

Commands:
  apexo agent create  create a new agent
  apexo agent list    list all available agents

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]"
`;

exports[`apexo CLI help-text snapshots every documented command emits stable help text: apexo uninstall --help 1`] = `
"apexo uninstall

uninstall apexo and remove all related files

Options:
  -h, --help         show help                                                             [boolean]
  -v, --version      show version number                                                   [boolean]
      --print-logs   print logs to stderr                                                  [boolean]
      --log-level    log level                  [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure         run without external plugins                                          [boolean]
  -c, --keep-config  keep configuration files                             [boolean] [default: false]
  -d, --keep-data    keep session data and snapshots                      [boolean] [default: false]
      --dry-run      show what would be removed without removing          [boolean] [default: false]
  -f, --force        skip confirmation prompts                            [boolean] [default: false]"
`;

exports[`apexo CLI help-text snapshots every documented command emits stable help text: apexo serve --help 1`] = `
"apexo serve

starts a headless apexo server

Options:
  -h, --help         show help                                                             [boolean]
  -v, --version      show version number                                                   [boolean]
      --print-logs   print logs to stderr                                                  [boolean]
      --log-level    log level                  [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure         run without external plugins                                          [boolean]
      --port         port to listen on                                         [number] [default: 0]
      --hostname     hostname to listen on                           [string] [default: "127.0.0.1"]
      --mdns         enable mDNS service discovery (defaults hostname to 0.0.0.0)
                                                                          [boolean] [default: false]
      --mdns-domain  custom domain name for mDNS service (default: apexo.local)
                                                                   [string] [default: "apexo.local"]
      --cors         additional domains to allow for CORS                      [array] [default: []]"
`;

exports[`apexo CLI help-text snapshots every documented command emits stable help text: apexo web --help 1`] = `
"apexo web

start apexo server and open web interface

Options:
  -h, --help         show help                                                             [boolean]
  -v, --version      show version number                                                   [boolean]
      --print-logs   print logs to stderr                                                  [boolean]
      --log-level    log level                  [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure         run without external plugins                                          [boolean]
      --port         port to listen on                                         [number] [default: 0]
      --hostname     hostname to listen on                           [string] [default: "127.0.0.1"]
      --mdns         enable mDNS service discovery (defaults hostname to 0.0.0.0)
                                                                          [boolean] [default: false]
      --mdns-domain  custom domain name for mDNS service (default: apexo.local)
                                                                   [string] [default: "apexo.local"]
      --cors         additional domains to allow for CORS                      [array] [default: []]"
`;

exports[`apexo CLI help-text snapshots every documented command emits stable help text: apexo models --help 1`] = `
"apexo models [provider]

list all available models

Positionals:
  provider  provider ID to filter models by                                                 [string]

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]
      --verbose     use more verbose model output (includes metadata like costs)           [boolean]
      --refresh     refresh the models cache from models.dev                               [boolean]"
`;

exports[`apexo CLI help-text snapshots every documented command emits stable help text: apexo stats --help 1`] = `
"apexo stats

show token usage and cost statistics

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]
      --days        show stats for the last N days (default: all time)                      [number]
      --tools       number of tools to show (default: all)                                  [number]
      --models      show model statistics (default: hidden). Pass a number to show top N, otherwise
                    shows all
      --project     filter by project (default: all projects, empty string: current project)[string]"
`;

exports[`apexo CLI help-text snapshots every documented command emits stable help text: apexo export --help 1`] = `
"apexo export [sessionID]

export session data as JSON

Positionals:
  sessionID  session id to export                                                           [string]

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]
      --sanitize    redact sensitive transcript and file data                              [boolean]"
`;

exports[`apexo CLI help-text snapshots every documented command emits stable help text: apexo import --help 1`] = `
"apexo import <file>

import session data from a JSON file

Positionals:
  file  path to JSON file                                                        [string] [required]

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]"
`;

exports[`apexo CLI help-text snapshots every documented command emits stable help text: apexo pr --help 1`] = `
"apexo pr <number>

fetch and checkout a GitHub PR branch, then run apexo

Positionals:
  number  PR number to checkout                                                  [number] [required]

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]"
`;

exports[`apexo CLI help-text snapshots every documented command emits stable help text: apexo session --help 1`] = `
"apexo session

manage sessions

Commands:
  apexo session list                list sessions
  apexo session delete <sessionID>  delete a session

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]"
`;

exports[`apexo CLI help-text snapshots every documented command emits stable help text: apexo plugin --help 1`] = `
"apexo plugin <module>

install plugin and update config

Positionals:
  module  npm module name                                                        [string] [required]

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]
  -g, --global      install in global config                              [boolean] [default: false]
  -f, --force       replace existing plugin version                       [boolean] [default: false]"
`;

exports[`apexo CLI help-text snapshots every documented command emits stable help text: apexo db --help 1`] = `
"apexo db

database tools

Commands:
  apexo db [query]     open an interactive sqlite3 shell or run a query                    [default]
  apexo db path        print the database path

Positionals:
  query  SQL query to execute                                                               [string]

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]
      --format      Output format                 [string] [choices: "json", "tsv"] [default: "tsv"]"
`;

exports[`apexo CLI help-text snapshots every documented command emits stable help text: apexo mcp list --help 1`] = `
"apexo mcp list

list MCP servers and their status

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]"
`;

exports[`apexo CLI help-text snapshots every documented command emits stable help text: apexo mcp add --help 1`] = `
"apexo mcp add [name]

add an MCP server

Positionals:
  name  name of the MCP server                                                              [string]

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]
      --url         URL for a remote MCP server                                             [string]
      --env         environment variable for a local MCP server (KEY=VALUE)                  [array]
      --header      HTTP header for a remote MCP server (KEY=VALUE)                          [array]"
`;

exports[`apexo CLI help-text snapshots every documented command emits stable help text: apexo mcp auth --help 1`] = `
"apexo mcp auth [name]

authenticate with an OAuth-enabled MCP server

Commands:
  apexo mcp auth list  list OAuth-capable MCP servers and their auth status            [aliases: ls]

Positionals:
  name  name of the MCP server                                                              [string]

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]"
`;

exports[`apexo CLI help-text snapshots every documented command emits stable help text: apexo mcp logout --help 1`] = `
"apexo mcp logout [name]

remove OAuth credentials for an MCP server

Positionals:
  name  name of the MCP server                                                              [string]

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]"
`;

exports[`apexo CLI help-text snapshots every documented command emits stable help text: apexo providers list --help 1`] = `
"apexo providers list

list providers and credentials

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]"
`;

exports[`apexo CLI help-text snapshots every documented command emits stable help text: apexo providers login --help 1`] = `
"apexo providers login [url]

log in to a provider

Positionals:
  url  apexo auth provider                                                                  [string]

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]
  -p, --provider    provider id or name to log in to (skips provider selection)             [string]
  -m, --method      login method label (skips method selection)                             [string]"
`;

exports[`apexo CLI help-text snapshots every documented command emits stable help text: apexo providers logout --help 1`] = `
"apexo providers logout [provider]

log out from a configured provider

Positionals:
  provider  provider id or name to log out from                                             [string]

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]"
`;

exports[`apexo CLI help-text snapshots every documented command emits stable help text: apexo agent create --help 1`] = `
"apexo agent create

create a new agent

Options:
  -h, --help                  show help                                                    [boolean]
  -v, --version               show version number                                          [boolean]
      --print-logs            print logs to stderr                                         [boolean]
      --log-level             log level         [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure                  run without external plugins                                 [boolean]
      --path                  directory path to generate the agent file                     [string]
      --description           what the agent should do                                      [string]
      --mode                  agent mode            [string] [choices: "all", "primary", "subagent"]
      --permissions, --tools  comma-separated list of permissions to allow (default: all).
                              Available: "bash, read, edit, glob, grep, webfetch, task, todowrite,
                              websearch, lsp, skill"                                        [string]
  -m, --model                 model to use in the format of provider/model                  [string]"
`;

exports[`apexo CLI help-text snapshots every documented command emits stable help text: apexo agent list --help 1`] = `
"apexo agent list

list all available agents

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]"
`;

exports[`apexo CLI help-text snapshots every documented command emits stable help text: apexo session list --help 1`] = `
"apexo session list

list sessions

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]
  -n, --max-count   limit to N most recent sessions                                         [number]
      --format      output format             [string] [choices: "table", "json"] [default: "table"]"
`;

exports[`apexo CLI help-text snapshots every documented command emits stable help text: apexo session delete --help 1`] = `
"apexo session delete <sessionID>

delete a session

Positionals:
  sessionID  session ID to delete                                                [string] [required]

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]"
`;

exports[`apexo CLI help-text snapshots every documented command emits stable help text: apexo db path --help 1`] = `
"apexo db path

print the database path

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]"
`;
